--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	Es el año 1986 y viajamos al año 2016
+	Es el año 1986 y viajamos al año 2016 y ahora viajan a 1966 a conocer a la madre de Martin
 </body>
 
 </html>
