--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	Es el año 1986 y viajamos al año 2016
+	Es el año 1986 y viajamos al año 2016 y tambien viajan al pasado
 </body>
 
 </html>
