--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	Es el año 1986 y viajamos al año 2016 y ahora tambien viajan
-	a 1966 a conocer a la madre de Martin
+	a 1966 a conocer a la madre de Martin y luego llega un rayo y manda al Doc al pasado
 </body>
 
 </html>
